--- a/style.css
+++ b/style.css
@@ -10,22 +10,31 @@
 .calculator {
     display: flex;
     flex-direction: column;
-    height: 500px;
+    height: 400px;
     width: 350px;
     border: 1px solid black;
     border-radius: 2px;
 }
 
-.display {
+.output {
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
     background-color: rgba(0,0,0,0.3);
-    height: 20%;
+    height: 30%;
     width: 100%;
 }
 
-.display span {
+.previous-operant,.current-operant{
+    display: flex;
+    height: 50%;
+    width: 100%;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+.output span {
     margin: 5%;
     font-size: 30px;
     font-family: 'Courier New', Courier, monospace;
@@ -34,7 +43,7 @@
 .calculator .buttons{
     display: flex;
     flex-wrap: wrap;
-    height: 80%;
+    height: 70%;
     width: 100%;
 }
 
