--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
     flex-direction: column;
     height: 400px;
     width: 350px;
-    border: 1px solid black;
     border-radius: 2px;
 }
 
@@ -24,9 +23,10 @@
     background-color: rgba(0,0,0,0.3);
     height: 30%;
     width: 100%;
+    border-radius: 7px;
 }
 
-.previous-operant,.current-operant{
+.previous-operant,.current-operant {
     display: flex;
     height: 50%;
     width: 100%;
@@ -40,18 +40,25 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-.calculator .buttons{
+.calculator .buttons {
     display: flex;
     flex-wrap: wrap;
     height: 70%;
     width: 100%;
 }
 
-.calculator .buttons button{
+.calculator .buttons button {
     display: flex;
     width: 25%;
     justify-content: center;
     font-size: 18px;
+    border: 0.4px solid #ccc;
+    border-radius: 6px;
+}
+
+.calculator .buttons button:hover {
+    background-color: rgba(0,0,0,0.8);
+    cursor: pointer;
 }
 
 .black {
